--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,68 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+    --background: #ffffff;
+    --foreground: #171717;
 }
 
 @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+    --color-background: var(--background);
+    --color-foreground: var(--foreground);
+    --font-sans: var(--font-geist-sans);
+    --font-mono: var(--font-geist-mono);
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+    :root {
+        --background: #0a0a0a;
+        --foreground: #ededed;
+    }
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+    background: var(--background);
+    color: var(--foreground);
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Gradient custom */
+.bg-gradient-custom {
+    background: linear-gradient(
+            0deg,
+            rgba(61, 61, 61, 0.4) 0%,
+            rgba(61, 61, 61, 0.4) 100%
+        ),
+        #060606;
+}
+
+/* Box shadow custom */
+.shadow-custom-inset {
+    box-shadow: 0px 0px 6.667px 0px rgba(61, 61, 61, 0.4) inset;
+}
+/* Border custom */
+.border-custom {
+    border: 1px solid rgba(61, 61, 61, 0.4);
+}
+
+/* Background gradient custom */
+.bg-gradient-custom2 {
+    background: linear-gradient(
+            0deg,
+            rgba(61, 61, 61, 0.2) 0%,
+            rgba(61, 61, 61, 0.2) 100%
+        ),
+        #060606;
+}
+.custom-btn {
+    padding: 30px 40px;
+    background: linear-gradient(to bottom, #f9a825, #e65100);
+    width: 100%;
+}
+.custom-second-btn {
+    padding: 30px 40px;
+    background: linear-gradient(to right, #2f2f2f, #3e3a36);
+    width: 100%;
+}
+.ant-btn:hover {
+    background: linear-gradient(to bottom, #f9a825, #c40d07) !important;
 }
